# computer-vision

./: .pre-commit-config.yaml  Makefile  README.md  calcDistanceParams.py  cameraCode.py  local_storage.json  main.py  pyproject.toml  setup.cfg
computer_vision/robot_interface/: dev_mode.py  prod_mode.py  robot_interface.py
computer_vision/utils/: calculations.py  dataclass_to_json.py  fake_capture.py  image_processing.py  internal_types.py
parameters/: cameraBall.json  cameraTarget.json  distance.json  hsvBall.json  hsvTarget.json
